<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListBasket">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftBL"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_hotdeal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:onClick="home"
            android:id="@+id/itemOne"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/itemOne"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemTwo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/itemTwo"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemOne" />


        <TextView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/itemThree"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTwo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_toRightOf="@id/leftBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="500dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/korzina"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/many"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>