<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:transitionName="courseImage"
    android:id="@+id/linerCard"
    tools:context=".Card">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/leftBL"
      android:layout_width="70dp"
      android:layout_height="match_parent"
      android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_hotdeal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/itemOne"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:rotation="270"
        android:text="@string/itemOne"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemTwo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:rotation="270"
        android:text="@string/itemTwo"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemOne" />


    <TextView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:rotation="270"
        android:text="@string/itemThree"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTwo" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_toRightOf="@id/leftBL"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/CardImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_unity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/titleCard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:gravity="center"
          android:text="E-commerce"
          android:textColor="@color/white"
          android:textSize="32dp" />


      <GridLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:columnCount="2"
          android:padding="20dp"
          android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="Старт обучения:"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="Уровень:"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/dateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="1 января"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/levelCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:gravity="left"
            android:text="Начальный"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

      </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_margin="10dp"
          android:gravity="left"
          android:text="@string/programm2"
          android:textColor="@color/white"
          android:textSize="16dp"
          android:textStyle="normal" />

      <Button
          android:onClick="addCard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="15dp"
          android:background="@drawable/korzina"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:text="@string/korzina"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="18dp" />


    </LinearLayout>

  </LinearLayout>


</RelativeLayout>