<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftBL"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_hotdeal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/itemOne"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/itemOne"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:onClick="bask"
            android:id="@+id/itemTwo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/itemTwo"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemOne" />


        <TextView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/itemThree"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTwo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/leftBL"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Courses"
                android:textColor="@color/black"
                android:textSize="34dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="App"
                android:textColor="@color/orange"
                android:textSize="34dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/ic_filter" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv"
            android:layout_width="263dp"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            tools:listitem="@layout/category_item" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rcv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp" />

    </RelativeLayout>


</RelativeLayout>